각 섹션 페이지 조회 api 보완